# RP2040_FreeRTOS_EZO_PH_i2c

./: CMakeLists.txt  README.md
include/: FreeRTOSConfig.h  blink_task.h  cli_task.h  clicommands.h  config.h  freertos_hooks.h  hardware.h  main.h  ph_sensor.h  sensor_task.h
lib/Ezo_I2c_lib_pico/: CMakeLists.txt
lib/Ezo_I2c_lib_pico/include/: Ezo_i2c.h  Ezo_i2c_util.h  config.h  iot_cmd.h  sequencer1.h  sequencer2.h  sequencer3.h  sequencer4.h
lib/Ezo_I2c_lib_pico/src/: Ezo_i2c.cpp  Ezo_i2c_util.cpp  iot_cmd.cpp  sequencer1.cpp  sequencer2.cpp  sequencer3.cpp  sequencer4.cpp
src/: blink_task.cpp  cli_task.cpp  freertos_hooks.cpp  hardware.cpp  main.cpp  ph_sensor.cpp  sensor_task.cpp
